z-index & footer fix

--- a/src/assets/css/components/header.pcss
+++ b/src/assets/css/components/header.pcss
@@ -1,7 +1,4 @@
 header {
-z-index:100;
-    @apply relative;
-
     .logo {
         @apply absolute z-20;
 
@@ -15,8 +12,7 @@ z-index:100;
     }
 
     nav {
-
-        @apply flex flex-col bg-white-darker text-nav uppercase leading-none font-bebas z-10;
+        @apply flex flex-col bg-white-darker text-nav uppercase leading-none font-bebas;
 
         @media (max-width: 1199px) {
             @apply fixed items-center inset-x-0 pt-48;
