--- a/src/assets/css/components/image-shadow.pcss
+++ b/src/assets/css/components/image-shadow.pcss
@@ -29,5 +29,4 @@
             left: -64px;
         }
     }
-    z-index:9;
 }
