--- a/src/assets/css/components/leaf.pcss
+++ b/src/assets/css/components/leaf.pcss
@@ -5,5 +5,5 @@
     background-position: right;
     height: 117px;
     margin-right: 30%;
-    z-index:1;
+    z-index: -10;
 }
